# Mette

./: cmakelists.txt  generate_build_17.bat
fix8/: CMakeLists.txt
fix8/include/fix8/: f8config.h
fix8/src/: message.cpp  xml.cpp
misc/: FIX44_bitstamp.xml
poco/: CMakeLists.txt  VERSION
src/: CommonDef.h  cmakelists.txt  main.cpp
src/Endpoints/: cmakelists.txt
src/Endpoints/Bitstamp/: GWBitstamp.h  PFBitstamp.cpp  PFBitstamp.h  cmakelists.txt
src/Endpoints/Gdax/: PFGdax.cpp  PFGdax.h  cmakelists.txt
src/MarketData/: MTBook.h  MTSnapshotBook.h  MTTrade.h  cmakelists.txt
src/Trades/: cmakelists.txt
src/Trades/QingLong/: cmakelists.txt
tbb/: CMakeLists.txt
tbb/include/tbb/: global_control.h
tbb/src/test/: test_global_control_whitebox.cpp
